Auth.Register.Command

--- a/LunaLoot.Master.Application/LunaLoot.Master.Application.csproj
+++ b/LunaLoot.Master.Application/LunaLoot.Master.Application.csproj
@@ -7,7 +7,19 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\LunaLoot.Master.Domain\LunaLoot.Master.Domain.csproj" />
       <ProjectReference Include="..\LunaLoot.Master.Infrastructure\LunaLoot.Master.Infrastructure.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="ErrorOr" Version="2.0.1" />
+      <PackageReference Include="MediatR" Version="12.2.0" />
+      <PackageReference Include="StackExchange.Redis" Version="2.7.33" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Auth\Commands\" />
+      <Folder Include="Common\" />
     </ItemGroup>
 
 </Project>
