--- a/LunaLoot.Master.Api/LunaLoot.Master.Api.csproj
+++ b/LunaLoot.Master.Api/LunaLoot.Master.Api.csproj
@@ -5,9 +5,16 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
-        <OutputType>Library</OutputType>
-        <RootNamespace>LunaLoot.Api</RootNamespace>
     </PropertyGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.3"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.4">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
+    </ItemGroup>
 
     <ItemGroup>
       <Content Include="..\.dockerignore">
@@ -16,7 +23,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <None Remove="Properties\launchSettings.json" />
+      <ProjectReference Include="..\LunaLoot.Master.Application\LunaLoot.Master.Application.csproj" />
+      <ProjectReference Include="..\LunaLoot.Master.Contracts\LunaLoot.Master.Contracts.csproj" />
     </ItemGroup>
 
 </Project>
