--- a/TestLunaLootMasterApplication/TestLunaLootMasterApplication.csproj
+++ b/TestLunaLootMasterApplication/TestLunaLootMasterApplication.csproj
@@ -11,7 +11,6 @@
 
     <ItemGroup>
         <PackageReference Include="coverlet.collector" Version="6.0.0"/>
-        <PackageReference Include="FluentAssertions" Version="6.12.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
         <PackageReference Include="xunit" Version="2.5.3"/>
         <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3"/>
@@ -19,6 +18,19 @@
 
     <ItemGroup>
         <Using Include="Xunit"/>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Auth\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\LunaLoot.Master.Application\LunaLoot.Master.Application.csproj" />
+      <ProjectReference Include="..\LunaLoot.Master.Contracts\LunaLoot.Master.Contracts.csproj" />
+      <ProjectReference Include="..\LunaLoot.Master.Domain\LunaLoot.Master.Domain.csproj" />
+      <ProjectReference Include="..\LunaLoot.Master.Infrastructure\LunaLoot.Master.Infrastructure.csproj" />
+      <ProjectReference Include="..\__mocks__\__mocks__.csproj" />
+      <ProjectReference Include="..\__stubs__\__stubs__.csproj" />
     </ItemGroup>
 
 </Project>
