test RegisterUser Command

--- a/TestLunaLootMasterInfrastructure/TestLunaLootMasterInfrastructure.csproj
+++ b/TestLunaLootMasterInfrastructure/TestLunaLootMasterInfrastructure.csproj
@@ -22,7 +22,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\__mocks__\__mocks__.csproj" />
+      <ProjectReference Include="..\LunaLoot.Master.Application\LunaLoot.Master.Application.csproj" />
       <ProjectReference Include="..\__stubs__\__stubs__.csproj" />
     </ItemGroup>
 
