--- a/LunaLoot.Master.Application/LunaLoot.Master.Application.csproj
+++ b/LunaLoot.Master.Application/LunaLoot.Master.Application.csproj
@@ -13,6 +13,7 @@
 
     <ItemGroup>
       <PackageReference Include="ErrorOr" Version="2.0.1" />
+      <PackageReference Include="FluentValidation" Version="11.9.0" />
       <PackageReference Include="MediatR" Version="12.2.0" />
       <PackageReference Include="StackExchange.Redis" Version="2.7.33" />
     </ItemGroup>
