--- a/TestLunaLootMasterApplication/TestLunaLootMasterApplication.csproj
+++ b/TestLunaLootMasterApplication/TestLunaLootMasterApplication.csproj
@@ -13,6 +13,7 @@
         <PackageReference Include="coverlet.collector" Version="6.0.0"/>
         <PackageReference Include="FluentAssertions" Version="6.12.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
+        <PackageReference Include="Moq" Version="4.20.70" />
         <PackageReference Include="xunit" Version="2.5.3"/>
         <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3"/>
     </ItemGroup>
@@ -26,7 +27,6 @@
       <ProjectReference Include="..\LunaLoot.Master.Contracts\LunaLoot.Master.Contracts.csproj" />
       <ProjectReference Include="..\LunaLoot.Master.Domain\LunaLoot.Master.Domain.csproj" />
       <ProjectReference Include="..\LunaLoot.Master.Infrastructure\LunaLoot.Master.Infrastructure.csproj" />
-      <ProjectReference Include="..\__mocks__\__mocks__.csproj" />
       <ProjectReference Include="..\__stubs__\__stubs__.csproj" />
     </ItemGroup>
 
