--- a/LunaLoot.Master.Application/LunaLoot.Master.Application.csproj
+++ b/LunaLoot.Master.Application/LunaLoot.Master.Application.csproj
@@ -12,7 +12,6 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="ErrorOr" Version="2.0.1" />
       <PackageReference Include="FluentValidation" Version="11.9.0" />
       <PackageReference Include="MediatR" Version="12.2.0" />
       <PackageReference Include="StackExchange.Redis" Version="2.7.33" />
@@ -20,7 +19,16 @@
 
     <ItemGroup>
       <Folder Include="Auth\Commands\" />
+      <Folder Include="Auth\Common\" />
       <Folder Include="Common\" />
+    </ItemGroup>
+    
+    <ItemGroup>
+        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+            <_Parameter1>
+                TestLunaLootMasterApplication
+            </_Parameter1>
+        </AssemblyAttribute>
     </ItemGroup>
 
 </Project>
