boilerplating for unit testing efcore

--- a/LunaLoot.Master.Infrastructure.UnitTests/LunaLoot.Master.Infrastructure.UnitTests.csproj
+++ b/LunaLoot.Master.Infrastructure.UnitTests/LunaLoot.Master.Infrastructure.UnitTests.csproj
@@ -24,6 +24,8 @@
 
     <ItemGroup>
       <Folder Include="Auth\Providers\Extensions\" />
+      <Folder Include="Persistence\EFCore\Features\" />
+      <Folder Include="Persistence\EFCore\Utils\" />
     </ItemGroup>
 
     <ItemGroup>
