--- a/LunaLoot.Master.Infrastructure.UnitTests/LunaLoot.Master.Infrastructure.UnitTests.csproj
+++ b/LunaLoot.Master.Infrastructure.UnitTests/LunaLoot.Master.Infrastructure.UnitTests.csproj
@@ -11,7 +11,11 @@
 
     <ItemGroup>
         <PackageReference Include="coverlet.collector" Version="6.0.0"/>
-        <PackageReference Include="FluentAssertions" Version="6.12.0" />
+        <PackageReference Include="FakeItEasier" Version="2.0.0" />
+        <PackageReference Include="FakeItEasy" Version="8.2.0" />
+        <PackageReference Include="FakeItEasy.AutoFakeIt" Version="2.0.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.4" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
         <PackageReference Include="Moq" Version="4.20.70" />
         <PackageReference Include="xunit" Version="2.5.3"/>
@@ -20,12 +24,6 @@
 
     <ItemGroup>
         <Using Include="Xunit"/>
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Auth\Providers\Extensions\" />
-      <Folder Include="Persistence\EFCore\Features\" />
-      <Folder Include="Persistence\EFCore\Utils\" />
     </ItemGroup>
 
     <ItemGroup>
