--- a/LunaLoot.Master.Infrastructure.UnitTests/LunaLoot.Master.Infrastructure.UnitTests.csproj
+++ b/LunaLoot.Master.Infrastructure.UnitTests/LunaLoot.Master.Infrastructure.UnitTests.csproj
@@ -11,13 +11,15 @@
 
     <ItemGroup>
         <PackageReference Include="coverlet.collector" Version="6.0.0"/>
-        <PackageReference Include="FakeItEasier" Version="2.0.0" />
         <PackageReference Include="FakeItEasy" Version="8.2.0" />
-        <PackageReference Include="FakeItEasy.AutoFakeIt" Version="2.0.0" />
+        <PackageReference Include="FluentAssertions" Version="6.12.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.4" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.4" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
         <PackageReference Include="Moq" Version="4.20.70" />
+        <PackageReference Include="Moq.AutoMock" Version="3.5.0" />
+        <PackageReference Include="NSubstitute" Version="5.1.0" />
         <PackageReference Include="xunit" Version="2.5.3"/>
         <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3"/>
     </ItemGroup>
@@ -28,6 +30,10 @@
 
     <ItemGroup>
       <ProjectReference Include="..\LunaLoot.Master.Infrastructure\LunaLoot.Master.Infrastructure.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Auth\Utils\" />
     </ItemGroup>
 
 </Project>
