--- a/LunaLoot.Master.Infrastructure.UnitTests/LunaLoot.Master.Infrastructure.UnitTests.csproj
+++ b/LunaLoot.Master.Infrastructure.UnitTests/LunaLoot.Master.Infrastructure.UnitTests.csproj
@@ -17,6 +17,7 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.4" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.4" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
+        <PackageReference Include="Microsoft.QualityTools.Testing.Fakes" Version="16.11.230815" />
         <PackageReference Include="Moq" Version="4.20.70" />
         <PackageReference Include="Moq.AutoMock" Version="3.5.0" />
         <PackageReference Include="xunit" Version="2.5.3"/>
@@ -29,6 +30,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\LunaLoot.Master.Infrastructure\LunaLoot.Master.Infrastructure.csproj" />
+      <ProjectReference Include="..\LunaLoot.Master.UnitTests.Shared\LunaLoot.Master.UnitTests.Shared.csproj" />
     </ItemGroup>
 
     <ItemGroup>
